--- a/html/demo1.html
+++ b/html/demo1.html
@@ -48,7 +48,7 @@
 
 				<section class="st-panel" id="nav-5">
 					<div class="st-desc" data-icon="l"></div>
-					<h1>Passion   ghhhghfghhf33344555</h1>
+					<h1>Passion   ghhhghfghhf33344555 gdfgdfg</h1>
 					<p>Remember, the brick walls are there for a reason.The brick walls are not there to keep us out.The brick walls are there to give us a chance to show how badly we want someting.</p>
 				</section>
 			</div>
